# test-package-creation-2

./: README.md  pyproject.toml  setup.py
my_test_awesome_project.egg-info/: PKG-INFO  SOURCES.txt
testpakage2/conda-meta/: expat-2.6.4-h313beb8_0.json  history  libffi-3.4.4-hca03da5_1.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.15-h80987f9_0.json  pip-25.0-py312hca03da5_0.json  python-3.12.9-h99e199e_0.json  readline-8.2-h1a28f6b_0.json  sqlite-3.45.3-h80987f9_0.json  tk-8.6.14-h6ba3021_0.json  wheel-0.45.1-py312hca03da5_0.json  xz-5.6.4-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
testpakage2/etc/: aau_token
testpakage2/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
testpakage2/lib/itcl4.2.4/: itclConfig.sh
testpakage2/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.12-embed.pc  python-3.12.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
testpakage2/lib/python3.12/: _sysconfigdata__darwin_darwin.py  _sysconfigdata__darwin_darwin.py.orig  _sysconfigdata_arm64_apple_darwin20_0_0.py
testpakage2/lib/python3.12/config-3.12-darwin/: Makefile  python-config.py
testpakage2/lib/tdbc1.1.7/: tdbcConfig.sh
testpakage2/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
testpakage2/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
testpakage2/share/terminfo/64/: ddr  dec-vt220
testpakage2/share/terminfo/6b/: kt7
(+134 files in other folders)
